# lilyfields

./: README.md  pyproject.toml
src/: A1_Get_BAG_Data.py  B1_AnalyzeBAG_lelies.py  B2_AdditionalAnalysis.py
