[tool.poetry]
name = "lelievelden"
version = "0.1.0"
description = "poetry file for the lelievelden project"
authors = ["Collin van Rooij <collin.van.rooij@ftm.nl>"]
license = "Creative Commons"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
geopandas = "^1.0.1"
pandas = "^2.2.3"
owslib = "^0.32.0"
requests = "^2.32.3"
duckdb = "^1.1.3"
pathlib = "^1.0.1"
pyarrow = "^19.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
